bdr.BDR.scala.error
Compilation error:
BDR:4: error: value update is not a member of String
    if(litMessage() = R){
       ^BDR:4: error: not found: value R
    if(litMessage() = R){
                      ^BDR:6: error: not found: value avancer
      avancer()
      ^BDR:8: error: value update is not a member of String
    if(litMessage() = L){
       ^BDR:8: error: not found: value L
    if(litMessage() = L){
                      ^BDR:10: error: not found: value avancer
      avancer()
      ^BDR:12: error: value update is not a member of String
    if(litMessage() = I){
       ^BDR:12: error: not found: value I
    if(litMessage() = I){
                      ^BDR:15: error: not found: value avancer
      avancer()
      ^BDR:17: error: value update is not a member of String
    if(litMessage() = A){
       ^BDR:17: error: not found: value A
    if(litMessage() = A){
                      ^BDR:18: error: not found: value avancer
      avancer()
      ^BDR:20: error: value update is not a member of String
    if(litMessage() = B){
       ^BDR:20: error: not found: value B
    if(litMessage() = B){
                      ^BDR:21: error: not found: value avancer
      avancer()
      ^BDR:22: error: not found: value avancer
      avancer()
      ^BDR:24: error: value update is not a member of String
    if(litMessage() = C){
       ^BDR:24: error: not found: value C
    if(litMessage() = C){
                      ^BDR:25: error: not found: value avancer
      avancer()
      ^BDR:26: error: not found: value avancer
      avancer()
      ^BDR:27: error: not found: value avancer
      avancer()
      ^BDR:29: error: value update is not a member of String
    if(litMessage() = Z){
       ^BDR:29: error: not found: value Z
    if(litMessage() = Z){
                      ^BDR:30: error: not found: value reculer
      reculer()
      ^BDR:32: error: value update is not a member of String
    if(litMessage() = Y){
       ^BDR:32: error: not found: value Y
    if(litMessage() = Y){
                      ^BDR:33: error: not found: value reculer
      reculer()
      ^BDR:34: error: not found: value reculer
      reculer()
      ^BDR:36: error: value update is not a member of String
    if(litMessage() = X){
       ^BDR:36: error: not found: value X
    if(litMessage() = X){
                      ^BDR:37: error: not found: value reculer
      reculer()
      ^BDR:38: error: not found: value reculer
      reculer()
      ^BDR:39: error: not found: value reculer
      reculer()
      ^